Add posibility to inject dll

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,83 @@
 /RadoHookLib/Debug/RadoHookLib.tlog/Lib-link.write.1.tlog
 /RadoHookLib/Debug/RadoHookLib.tlog/RadoHookLib.lastbuildstate
 /RadoHookLib/RadoHookLib.vcxproj.user
+/SpyCreateWindow/x64/Debug/vc141.idb
+/SpyCreateWindow/x64/Debug/vc141.pdb
+/x64/Debug/HookPerformer.ilk
+/x64/Debug/HookPerformer.pdb
+/x64/Debug/reports/apiCallsReport.txt
+/x64/Debug/reports/logOutput.txt
+/x64/Debug/SpyCreateWindow.ilk
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.log
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/CL.command.1.tlog
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/CL.read.1.tlog
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/CL.write.1.tlog
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/link.command.1.tlog
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/link.read.1.tlog
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/link.write.1.tlog
+/SpyCreateWindow/x64/Debug/SpyCreateWindow.tlog/SpyCreateWindow.lastbuildstate
+/x64/Debug/SpyCreateWindow.pdb
+/HookPerformer/x64/Debug/vc141.idb
+/HookPerformer/x64/Debug/vc141.pdb
+/RadoHook/Debug/RadoHook.idb
+/RadoHook/Debug/RadoHook.pdb
+/RadoHook/Debug/RadoHook.tlog/Lib.command.1.tlog
+/RadoHook/Debug/RadoHook.tlog/Lib-link.read.1.tlog
+/RadoHook/Debug/RadoHook.tlog/Lib-link.write.1.tlog
+/RadoHook/x64/Debug/RadoHook.idb
+/RadoHook/x64/Debug/RadoHook.log
+/RadoHook/x64/Debug/RadoHook.pdb
+/RadoHook/x64/Debug/RadoHook.tlog/CL.command.1.tlog
+/RadoHook/x64/Debug/RadoHook.tlog/CL.read.1.tlog
+/RadoHook/x64/Debug/RadoHook.tlog/CL.write.1.tlog
+/RadoHook/x64/Debug/RadoHook.tlog/Lib.command.1.tlog
+/RadoHook/x64/Debug/RadoHook.tlog/Lib-link.read.1.tlog
+/RadoHook/x64/Debug/RadoHook.tlog/Lib-link.write.1.tlog
+/RadoHook/x64/Debug/RadoHook.tlog/RadoHook.lastbuildstate
+/SpyCreateWindow/Debug/SpyCreateWindow.log
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/CL.command.1.tlog
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/CL.read.1.tlog
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/CL.write.1.tlog
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/link.command.1.tlog
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/link.read.1.tlog
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/link.write.1.tlog
+/SpyCreateWindow/Debug/SpyCreateWindow.tlog/SpyCreateWindow.lastbuildstate
+/SpyCreateWindow/Debug/vc141.idb
+/SpyCreateWindow/Debug/vc141.pdb
+/SpyCreateWindow/reportslogOutput.txt
+/HookPerformer/x64/Debug/HookPerformer.tlog/CL.command.1.tlog
+/HookPerformer/x64/Debug/HookPerformer.tlog/CL.read.1.tlog
+/HookPerformer/x64/Debug/HookPerformer.tlog/CL.write.1.tlog
+/HookPerformer/x64/Debug/HookPerformer.tlog/HookPerformer.lastbuildstate
+/HookPerformer/x64/Debug/HookPerformer.tlog/link.command.1.tlog
+/HookPerformer/x64/Debug/HookPerformer.tlog/link.read.1.tlog
+/HookPerformer/x64/Debug/HookPerformer.tlog/link.write.1.tlog
+/SpyCreateWindow/SpyCreateWindow.vcxproj.user
+/HookPerformer/Debug/HookPerformer.log
+/HookPerformer/Debug/HookPerformer.tlog/CL.command.1.tlog
+/HookPerformer/Debug/HookPerformer.tlog/CL.read.1.tlog
+/HookPerformer/Debug/HookPerformer.tlog/CL.write.1.tlog
+/HookPerformer/Debug/HookPerformer.tlog/HookPerformer.lastbuildstate
+/HookPerformer/Debug/HookPerformer.tlog/link.command.1.tlog
+/HookPerformer/Debug/HookPerformer.tlog/link.read.1.tlog
+/HookPerformer/Debug/HookPerformer.tlog/link.write.1.tlog
+/HookPerformer/Debug/vc141.idb
+/HookPerformer/Debug/vc141.pdb
+/HookPerformer/HookPerformer.vcxproj.user
+/HookPerformer/x64/Debug/HookPerformer.log
+/RadoHook/RadoHook.vcxproj.user
+/.vs/Hooks/v15/ipch/AutoPCH/3d11c789f68ccf09/APICALLANALYSIS.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/5b1d367ae48e105a/APICALLANALYSIS.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/5ef5dd1ab9134492/DLLMAIN.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/7f3ce9b0d05cf641/DLLMAIN.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/872d44c8447e56d8/HOOKPERFORMER.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/8acf27839843af8/SPYCREATEWINDOW.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/a3ece3078841bb1b/HOOKPERFORMER.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/fbbb4ae69d2cc8bb/SPYCREATEWINDOW.ipch
+/.vs/Hooks/v15/ipch/AutoPCH/fc1389d1f21d7fb8/LOGHELPER.ipch
+/Debug/HookPerformer.ilk
+/Debug/HookPerformer.pdb
+/Debug/reports/apiCallsReport.txt
+/Debug/reports/logOutput.txt
+/Debug/SpyCreateWindow.ilk
+/Debug/SpyCreateWindow.pdb
