--- a/SpyCreateWindow/SpyCreateWindow.vcxproj
+++ b/SpyCreateWindow/SpyCreateWindow.vcxproj
@@ -20,10 +20,11 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{83A29358-C572-42A2-9515-C381455AF1B0}</ProjectGuid>
+    <ProjectGuid>{3233810F-9E85-4BE6-AEEA-B8A5828AC01E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>SimplePrintMessage</RootNamespace>
+    <RootNamespace>AntiDebugTricksRecognizer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>SpyCreateWindow</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -151,7 +152,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SimplePrintMessage.cpp" />
+    <ClCompile Include="LogHelper.cpp" />
+    <ClCompile Include="ApiCallAnalysis.cpp" />
+    <ClCompile Include="SpyCreateWindow.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="asserts.h" />
+    <ClInclude Include="LogHelper.h" />
+    <ClInclude Include="ntdll_struct.h" />
+    <ClInclude Include="ApiCallAnalysis.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
